@@ -1,1 +1,4 @@
+requires 'Encode';
+requires 'HTTP::CookieJar';
 requires 'HTTP::Tiny';
+requires 'Mojolicious';
